<resources>
    <string name="app_name">Final Project</string>
    <string name="textView_charge">Electric Car Charging Station finder</string>
    <string name="textView_currency">Foreign currency conversion </string>
    <string name="textView_menu">Recipe search engine</string>
    <string name="textView_news">News Api.org headlines </string>
    <string name="menu_title_charger">Electric Car Charging Station finder</string>
    <string name="menu_title_currency">Foreign currency conversion</string>
    <string name="menu_title_recipe">Recipe search engine</string>
    <string name="menu_title_news">News Api.org headlines</string>


    <string name="text_firstCurrency">Input amount</string>
    <string name="text_secondCurrency">Output amount</string>
    <string name="button_convert">Convert Currency</string>
    <string name="text_from">Convert From：</string>
    <string name="text_to">Convert TO：</string>

    <string name="saved">Saved Articles</string>
    <string name="title_saved">Saved Article</string>
    <string name="title_save">Save</string>
    <string name="title_delete">Delete</string>
    <string name="help">Help</string>
    <string name="button_help">I Like It!</string>
    <string name="button_alert">Bug Alert!</string>
    <string name="textView_message">Leave Message</string>
    <string name="textView_logo">LOGO</string>
    <string name="detail_button">View Detail</string>
    <string name="help_detail">
         \nVersion 0.9.\nNews Headlines Api App By Jicheng Hu\n
         \nApp displays recent news and the news can be saved.\n
         \nThe user can search for articles related to a given topic.</string>
    <string name="help_detail2">Uer can save article they like.</string>

    <string name="currency_help_dialog">Version 0.9.\n
         \nForeign Currency conversion api App By Yuan Zhou\n
         \nApp can use the recent conversion to convert the amount.\n
         \nThe user can search for initial currency and type the amount, will display the conversion to another currency.</string>

    <string name="currency_delete">Delete!</string>
    <string name="rating">Enter your ratings here</string>
    <string name="charger_help_author">Author\'s Name: Jie Zhang</string>
    <string name="charger_help_versionnumber">Activity Version Number: ChargerFinder001</string>
    <string name="charger_help_instructions">Instructions:The user can input a latitude and longitude location, and the server returns a list of charging stations near that location.
    </string>
    <string name="charger_row_title">title here</string>
    <string name="charger_latitude">latitude</string>
    <string name="charger_longitude">longitude</string>
    <string name="charger_stationphone">stationphone</string>
    <string name="charger_delete">Delete</string>
    <string name="charger_google_map">Google Map</string>

    <string name="charger_like">I like it!</string>


    <string name="recipeForSearch"> please input </string>
    <string name="RecipeSearch">Search</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="recipeLink">You can find recipe here </string>
    <string name="saveRecipeButton">Save this recipes </string>
    <string name="deleteRecipe">Delete</string>
    <string name="exitButton">Go Home</string>
    <string name="deleteFavourites">Delete</string>
    <string name="gomyfave"> My favourite recipe</string>
    <string name="recipe_hepl_sring"> help</string>
    <string name="charger_Iwanttocharge">I want to charge here!</string>

    <string name="recipe_helpmenu_title">Help</string>
    <string name="recipe_help_string">\nVersion 0.9.\n
          \n Rceipe Api App By Zheyuan Li\n
         \nApp displays recipe.\n
         \nThe user can search for recipe related to a given topic</string>
    <string name="recipe_toast_string">\"please enter the food that you want to search.\"</string>
    <string name="recipe_gohome_string">Go home</string>

</resources>
