<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="android.example.finalproject.News_ArticleActivity">


    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_save"
        app:showAsAction="collapseActionView|always"
        android:title="@string/title_save" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="collapseActionView|always"
        android:title="@string/title_delete" />

    <item
        android:id="@+id/title_saved"
        android:icon="@drawable/ic_saved"
        app:showAsAction="collapseActionView|always"
        android:title="@string/title_saved" />

</menu>