<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="android.example.finalproject.ChargerStationDetail">

    <item
        android:id="@+id/charger_save"
        android:icon="@drawable/charger_ic_save"
        app:showAsAction="collapseActionView|always"
        android:title="@string/title_save" />


    <item
        android:id="@+id/charger_saved"
        android:icon="@drawable/charger_ic_saved"
        app:showAsAction="collapseActionView|always"
        android:title="@string/title_saved" />

    <item
        android:id="@+id/charger_help"
        app:showAsAction="collapseActionView|always"
        android:icon="@drawable/charger_ic_help"
        android:title="@string/help" />

</menu>