<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".News_Help">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1bbc9b"
        android:padding="45px">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="87dp"
            android:layout_centerInParent="true"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/news_help" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:background="#1bbc9b"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/github"

            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/help_detail"
        android:textColor="#555" />

    <Button
        android:id="@+id/button_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_help" />

    <Button
        android:id="@+id/button_alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_alert" />

    <TextView
        android:id="@+id/textView_alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="Alert received!" />

    <EditText
        android:id="@+id/textView_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView_message" />

    <TextView
        android:id="@+id/textView_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView_logo" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/frame_container"
        android:layout_margin="15dp">


    </FrameLayout>


</LinearLayout>