<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipe_title"
        android:textStyle="bold"
        android:id="@+id/recipeTitle"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="60dp"
        android:layout_alignParentTop="true"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/recipeTitleValue"
        android:layout_below="@+id/recipeTitle"
        android:layout_centerHorizontal="true"
        />

    <ImageView
        android:layout_width="320dp"
        android:layout_height="300dp"
        android:id="@+id/recipeImage"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/recipeTitleValue"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipeLink"
        android:textStyle="bold"
        android:id="@+id/recipeLink"
        android:layout_below="@+id/recipeImage"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="50dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/recipeValue"
        android:layout_below="@+id/recipeLink"
        />
    <Button
        android:id="@+id/saveRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recipeValue"

        android:text="@string/saveRecipeButton"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="50dp"

        />

</RelativeLayout>