<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="106dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"

        android:layout_marginStart="73dp"
        android:layout_marginLeft="73dp"
        android:layout_marginTop="79dp"
        android:background="@drawable/charger"
        android:onClick="Charger"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/textView_charge"
        android:layout_width="171dp"
        android:layout_height="68dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="107dp"
        android:layout_marginEnd="50dp"
        android:text="@string/textView_charge"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Button
        android:id="@+id/button2"
        android:layout_width="101dp"
        android:layout_height="77dp"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="61dp"
        android:layout_marginLeft="-100dp"
        android:layout_marginTop="228dp"
        android:layout_toRightOf="@id/button1"
        android:background="@drawable/recipe"
        android:onClick="Recipe"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/textView_menu"
        android:layout_width="169dp"
        android:layout_height="66dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="241dp"
        android:layout_marginEnd="50dp"
        android:text="@string/textView_menu"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Button
        android:id="@+id/button3"
        android:layout_width="73dp"
        android:layout_height="123dp"
        android:layout_below="@id/button1"

        android:layout_alignParentStart="true"
        android:layout_marginStart="76dp"
        android:layout_marginTop="164dp"
        android:background="@drawable/currency"
        android:onClick="Currency"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/textView_currency"
        android:layout_width="171dp"
        android:layout_height="74dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="390dp"
        android:layout_marginEnd="50dp"
        android:text="@string/textView_currency"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="87dp"
        android:layout_below="@id/button2"
        android:layout_alignParentStart="true"

        android:layout_centerVertical="true"
        android:layout_marginStart="72dp"
        android:layout_marginTop="217dp"
        android:background="@drawable/news"
        android:onClick="News"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/textView_news"
        android:layout_width="186dp"
        android:layout_height="62dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="532dp"
        android:layout_marginEnd="31dp"
        android:text="@string/textView_news"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

</RelativeLayout>